# system-dashnote

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  Untitled  _test_pyproject.toml  api_test.http  config.py  docker-compose.yml  dockerfile.api  dockerfile.worker  pyproject.toml  pytest.ini  readme.md  requirements.api.txt  requirements.dev.txt  requirements.txt  requirements.worker.txt
alembic/: env.py
alembic/versions/: 202605131530_create_files_and_attachments.py  4f6eae3a2382_create_notebooks_and_pages_tables.py  52bc7b7d864f_initial_workspace_and_auth_models.py  6f0d7e623427_initial.py  921927f71545_create_notebooks_and_pages_tables.py  d180d0d620af_notebook.py  f5f674cda731_add_notes_module.py
docs/: api.md  auth.md  lld.md  qs.md  system.md
nginx/: default.conf
requirements/: _all.txt  base.txt
src/: config.py  context.md  main.py
src/auth/: dependency.py  models.py  router.py  schemas.py  security.py  service.py
src/core/: health.py
src/docs/: ai.md  api.md  auth.md  lld.md  new.md  system.md
src/files/: models.py  permissions.py  repository.py  router.py  schemas.py
src/membership/: repository.py  router.py  schemas.py  service.py
src/notebooks/: models.py  repository.py  router.py  schemas.py
src/notes/: models.py  permissions.py  repository.py  router.py  schemas.py
src/pages/: models.py  versioning.py
src/worker/: tasks.py
src/workspaces/: models.py  repository.py  router.py  schemas.py
tests/: conftest.py  supabase_smoke_test.py
tests/auth/: test_auth_tokens_api.py  test_security.py
worker/: main.py
(+34 files in other folders)
